fix card header tabs in dark mode

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -494,6 +494,8 @@ $card-ribbon-margin: .25rem !default;
 $card-ribbon-border-radius: var(--#{$prefix}border-radius) !default;
 $card-ribbon-font-size: $h6-font-size !default;
 
+$card-header-tabs-bg: var(--#{$prefix}bg-surface-secondary) !default;
+
 $cards-grid-gap: 1rem !default;
 $cards-grid-breakpoint: lg !default;
 
@@ -595,9 +597,11 @@ $nav-bordered-link-active-border-width: 2 * $border-width !default;
 $nav-bordered-margin-x: 1.25rem !default;
 
 $nav-tabs-border-color: var(--#{$prefix}border-color) !default;
+$nav-tabs-border-radius: var(--#{$prefix}border-radius) !default;
 $nav-tabs-link-hover-border-color: $nav-tabs-border-color $nav-tabs-border-color $nav-tabs-border-color !default;
 $nav-tabs-link-active-border-color: $nav-tabs-link-hover-border-color !default;
 $nav-tabs-link-active-color: var(--#{$prefix}body-color) !default;
+$nav-tabs-bg: var(--#{$prefix}bg-surface-secondary) !default;
 
 
 // Navbar
